// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Component should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx jNnzgs"
    width="75%"
  >
    <img
      alt="Avatar Image"
      src="https://scontent.faep5-1.fna.fbcdn.net/v/t1.0-9/118404240_10157203921491816_5452134641605056529_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=-GrYADG-VDsAX9949ai&_nc_ht=scontent.faep5-1.fna&oh=14ae5d038864692e363d7a8c8442ddb3&oe=5F8DDECD"
    />
  </div>
</DocumentFragment>
`;

exports[`Image Component should render correctly with circular prop 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx fVcTyk"
    width="75%"
  >
    <img
      alt="Avatar Image"
      src="https://scontent.faep5-1.fna.fbcdn.net/v/t1.0-9/118404240_10157203921491816_5452134641605056529_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=-GrYADG-VDsAX9949ai&_nc_ht=scontent.faep5-1.fna&oh=14ae5d038864692e363d7a8c8442ddb3&oe=5F8DDECD"
    />
  </div>
</DocumentFragment>
`;
